fixed navbar alignment - much better now

--- a/OnlinePortal/Stylesheets/main.css
+++ b/OnlinePortal/Stylesheets/main.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
 }
+
 html{
 
 }
@@ -34,15 +35,34 @@ p.rightIn{
 
 }
 
+p.rightIn,
+p:nth-child(3)
+{
+    float: right;
+    margin: 0px 5px;
+    width: auto;
+}
+
 .rightIn:hover{
     text-decoration: underline;
-
     color: grey;
 }
+/*
+create the hover style for the right aligned nav
+*/
+
+
 
 .HL{
     margin-left: 10px;
     color:white;
     font-size:24px;
+}
+/*
+Style the navbar seperators
+*/
+
+div.statusBar{
+    width: 100%;
 
 }
